Fixed Spacing

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font: 100%/1.5 system-ui;
     max-width: 100ch;
     margin-inline: max(1em, (100% - 100ch) / 2);
-    padding: 5px;
+    padding: 15px;
 
     ul {
       display: contents;
@@ -17,7 +17,7 @@ body {
 
     nav {
       display: flex;
-      margin-bottom: 3ch;
+      margin-bottom: 2ch;
       border-bottom-width: 1px;
       border-bottom-style: solid;
       border-bottom-color: oklch(80% 3% 200);
